--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1,6 +1,14 @@
 .catalog {
-  margin: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
+  padding: 1rem;
+  height: 100vh;
+  width: 100vw;
+  /* background-color: rgba(204, 204, 204, 0.301); */
+  /* font-family: Arial, Helvetica, sans-serif; */
+}
+
+.card {
+  width: 25rem;
+  height: 15rem;
 }
 
 .beer {
