--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -15,6 +15,19 @@
   text-align:center;
 }
 
+button {
+  margin:5px;
+}
+
+.form-style {
+  display:flex;
+  justify-content:center;
+}
+.header-style {
+  display:flex;
+  justify-content:center;
+}
+
 h3 {
   padding-top: 10px;
   font-size: 32px;
